--- a/app/src/main/res/layout/activity_add_happy_place.xml
+++ b/app/src/main/res/layout/activity_add_happy_place.xml
@@ -103,32 +103,38 @@
                 android:textSize="18sp"
                 android:layout_marginTop="16dp"
                 android:clickable="true"
-                android:padding="8dp"/>
+                android:padding="8dp"
+                android:foreground="?attr/selectableItemBackground"
+                android:background="@drawable/shape_image_border"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="16dp">
+                android:layout_marginTop="24dp">
 
-                <ImageButton
+                <ImageView
                     android:id="@+id/btnSelectImage"
-                    android:layout_width="0dp"
-                    android:layout_height="150dp"
-                    android:layout_weight="1"
-                    android:src="@drawable/add_screen_image_placeholder"/>
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:background="@drawable/shape_image_border"
+                    android:src="@drawable/add_screen_image_placeholder"
+                    android:scaleType="centerCrop"
+                    android:padding="2dp"/>
 
                 <TextView
                     android:id="@+id/tvAddImage"
-                    android:layout_width="0dp"
-                    android:layout_height="150dp"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="ADD IMAGE"
-                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:padding="10dp"
+                    android:layout_marginLeft="20dp"
                     android:clickable="true"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:textColor="@color/indigo_500"/>
+                    android:textColor="@color/indigo_500"
+                    android:background="?attr/selectableItemBackground"/>
             </LinearLayout>
 
             <Button
