--- a/app/src/main/res/layout/activity_add_happy_place.xml
+++ b/app/src/main/res/layout/activity_add_happy_place.xml
@@ -114,7 +114,7 @@
                 android:layout_marginTop="24dp">
 
                 <ImageView
-                    android:id="@+id/btnSelectImage"
+                    android:id="@+id/iv_add_image"
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:background="@drawable/shape_image_border"
@@ -123,7 +123,7 @@
                     android:padding="2dp"/>
 
                 <TextView
-                    android:id="@+id/tvAddImage"
+                    android:id="@+id/tv_add_image"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="ADD IMAGE"
