--- a/app/src/main/res/layout/activity_add_happy_place.xml
+++ b/app/src/main/res/layout/activity_add_happy_place.xml
@@ -144,6 +144,7 @@
                 android:text="SAVE"
                 android:textSize="20sp"
                 android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
                 android:background="@drawable/shape_btn_rounded"/>
         </LinearLayout>
     </ScrollView>
